--- a/data-collection-site-demographics.Rmd
+++ b/data-collection-site-demographics.Rmd
@@ -20,9 +20,9 @@ knitr::opts_chunk$set(echo = TRUE,
                       fig.path = "img/")
 
 # Install packman for subsequent package management
-if (!("pacman" %in% installed.packages()[,])) {
-    install.packages("pacman")
-}
+# if (!("pacman" %in% installed.packages()[,])) {
+#     install.packages("pacman")
+# }
 
 # Load packages
 pacman::p_load(ggplot2, dplyr, stringr, choroplethr, choroplethrMaps)
