--- a/PLAY-recruiting-site-report.Rmd
+++ b/PLAY-recruiting-site-report.Rmd
@@ -10,15 +10,18 @@ params:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE,
+                      warning=FALSE, message=FALSE, error=FALSE)
 source("R/site_report_functions.R")
 
 library(tidyverse)
 ```
 
+# Data for `r params$counties` County in `r params$state`
+
 # Population
 
-```{r, warning=FALSE, message=FALSE, error=FALSE}
+```{r population}
 total_pop <- get_total_pop(state = params$state, county = params$counties)
 white_pop <- get_white_pop(state = params$state, county = params$counties)
 pop <- data.frame(NAME = total_pop$NAME, total_pop = total_pop$estimate, white_pop = white_pop$estimate)
@@ -28,7 +31,7 @@ pop %>% knitr::kable()
 
 # Spanish-speaking
 
-```{r, warning=FALSE, message=FALSE, error=FALSE}
+```{r spanish-speaking}
 sp_spkrs <- get_spanish_speakers(state=params$state, county=params$counties)
 
 sp_spkrs %>%
@@ -39,12 +42,104 @@ sp_spkrs %>%
 
 # Educational attainment
 
-```{r, warning=FALSE, message=FALSE, error=FALSE}
-ed_attain <- make_ed_attain_wide(state=params$state, county=params$counties)
-simplified_ed_attain <- simplify_ed_attain(ed_attain)
+```{r ed-attain-functions}
+get_ed_attain <- function(state="PA", county="Centre") {
+  census_table <- c("B15003_001", # total
+                    "B15003_002", # none
+                    "B15003_003", # <K
+                    "B15003_004", # K
+                    "B15003_005", # 1st
+                    "B15003_006", # 2nd
+                    "B15003_007", # 3rd
+                    "B15003_008", # 4th
+                    "B15003_009", # 5th
+                    "B15003_010", # 6th
+                    "B15003_011", # 7th
+                    "B15003_012", # 8th
+                    "B15003_013", # 9th
+                    "B15003_014", # 10th
+                    "B15003_015", # 11th
+                    "B15003_016", # 12th
+                    "B15003_017", # HS
+                    "B15003_018", # GED
+                    "B15003_019", # Coll<1
+                    "B15003_020", # Coll>1
+                    "B15003_021", # AA
+                    "B15003_022", # BA
+                    "B15003_023", # MA
+                    "B15003_024", # Prof
+                    "B15003_025")  # PhD
+  variable_name <- "ed_attain"
+  get_census_data(state = state, county = county, 
+                  census_table = census_table,
+                  variable_name = variable_name)
+}
 
-simplified_ed_attain %>% 
-  dplyr::select(., NAME, p_lt_hs, p_hs_grad, p_some_coll, p_ba, p_ba_plus) %>%
-  knitr::kable()
+ed <- get_ed_attain(state = params$state, county = params$counties)
+```
+
+## Population
+
+```{r}
+ed_w <- make_ed_attain_wide(ed)
+ed_s <- simplify_ed_attain(ed_w)
+ed_t <- tidy_ed_attain(ed_s)
+
+ed_t %>%
+  knitr::kable(.)
+```
+
+```{r}
+plot_bar_ed_attain <- function(df) {
+  require(ggplot2)
+  # Drop total
+  df <- dplyr::filter(df, ed_attain != 'total')
+  # reorder ed_attain
+  df$ed_attain <- factor(df$ed_attain, levels = c("ba_plus", "ba", 
+                                                  "some_coll", 
+                                                  "hs_grad", "lt_hs"))
+  p <- ggplot(df) +
+    aes(x = NAME, y = n, fill = ed_attain) +
+    geom_bar(stat='identity') +
+    ylab("Population") +
+    xlab("County")
+  p
+}
+
+plot_bar_ed_attain(ed_t)
+```
+
+## Proportion of population
+
+```{r plot-ed-attainment-proportions}
+ed_p <- ed_s %>%
+  dplyr::mutate(., p_lt_hs = lt_hs/total,
+                p_hs_grad = hs_grad/total,
+                p_some_coll = some_coll/total,
+                p_ba = ba/total,
+                p_ba_plus = ba_plus/total) %>%
+  dplyr::select(., NAME, starts_with("p_")) %>%
+  tidyr::gather(., ed_attain, n, -NAME)
+
+ed_p %>%
+  knitr::kable(.)
+```
+
+```{r}
+plot_bar_ed_attain_p <- function(df) {
+  require(ggplot2)
+  # reorder ed_attain
+  df$ed_attain <- factor(df$ed_attain, levels = c("p_ba_plus", "p_ba", 
+                                                  "p_some_coll",
+                                                  "p_hs_grad", "p_lt_hs"))
+  p <- ggplot(df) +
+    aes(x = NAME, y = n, fill = ed_attain) +
+    geom_bar(stat='identity') +
+    ylab("Proportion of population") +
+    xlab("County")
+  p
+}
+
+plot_bar_ed_attain_p(ed_p)
 ```
 
