--- a/PLAY-recruiting-site-report.Rmd
+++ b/PLAY-recruiting-site-report.Rmd
@@ -7,6 +7,7 @@ output:
 params:
   counties: Centre
   state: PA
+  target_n: 30
 ---
 
 ```{r setup, include=FALSE}
@@ -17,27 +18,163 @@ source("R/site_report_functions.R")
 library(tidyverse)
 ```
 
+```{r helper-functions}
+get_census_data <- function(state="PA", county="Centre", 
+                            census_table="B19013_001", variable_name="median_inc",
+                            get_geometry = FALSE) {
+  require(tidycensus)
+  require(tidyverse)
+  
+  if (!(is.character(state))) {
+    stop("'state' must be character")
+  }
+  if (!(is.character(county))) {
+    stop("'county' must be character")
+  }
+  if (!(is.character(census_table))) {
+    stop("'census_table' must be character")
+  }
+  if (!(is.character(variable_name))) {
+    stop("'variable_name' must be character")
+  }
+  if (stringr::str_length(state) != 2) {
+    stop("'state' must be of length 2")
+  }
+  
+  census_data <- get_acs(geography = "county",
+                         assign(variable_name, census_table),
+                         state = state,
+                         county = county,
+                         geometry = get_geometry,
+                         cache_table = TRUE)
+  # super hacky
+  census_data$variable_name <- variable_name
+  census_data
+}
+
+get_pop_tot_white <- function(state="PA", county="Centre") {
+  census_table <- c("C02003_001", "C02003_003")
+  variable_name <- "total_pop_1_race"
+  get_census_data(state = state, county = county, 
+                  census_table = census_table,
+                  variable_name = variable_name)
+}
+```
+
 # Data for `r params$counties` County in `r params$state`
 
 # Population
 
 ```{r population}
-total_pop <- get_total_pop(state = params$state, county = params$counties)
-white_pop <- get_white_pop(state = params$state, county = params$counties)
-pop <- data.frame(NAME = total_pop$NAME, total_pop = total_pop$estimate, white_pop = white_pop$estimate)
+pop <- get_pop_tot_white(state = params$state, county=params$counties)
+pop_clean <- pop %>%
+  dplyr::select(., NAME, variable, estimate) %>%
+  tidyr::spread(., key=variable, value=estimate) %>%
+  dplyr::rename(., total=C02003_001, white=C02003_003) %>%
+  dplyr::mutate(., non_white = total-white,
+                p_white = white/total,
+                p_non_white = non_white/total) %>%
+  tidyr::gather(., key=pop, value=n, -NAME)
 
-pop %>% knitr::kable()
+pop_n <- pop_clean %>%
+  dplyr::filter(., pop %in% c('white', 'non_white'))
+
+pop_n %>% knitr::kable(.)
 ```
 
-# Spanish-speaking
+## Total
 
-```{r spanish-speaking}
-sp_spkrs <- get_spanish_speakers(state=params$state, county=params$counties)
+```{r population-total}
+pop_n %>%
+  ggplot(.) +
+  aes(x = NAME, y = n, fill = pop) +
+    geom_bar(stat='identity') +
+    ylab("Population") +
+    xlab("County")
+```
 
-sp_spkrs %>%
-  dplyr::select(NAME, estimate) %>%
-  dplyr::rename(n_spanish_spkrs = estimate) %>%
-  knitr::kable()
+## Proportion
+
+```{r population-proportion}
+pop_p <- pop_clean %>%
+  dplyr::filter(., pop %in% c('p_white', 'p_non_white'))
+
+pop_p %>%
+  ggplot(.) +
+  aes(x = NAME, y = n, fill = pop) +
+    geom_bar(stat='identity') +
+    ylab("Proportion of population") +
+    xlab("County")
+```
+
+# Spanish-speakers
+
+```{r spanish-speakers}
+spanish_tables = c("B16007_001", "B16007_009", "B16007_010", "B16007_011", "B16007_012", "B16007_013", "B16007_014", "B16007_015", "B16007_016", "B16007_017", "B16007_018", "B16007_019")
+
+sp <- get_census_data(state=params$state,
+                      county=params$counties,
+                      census_table=spanish_tables)
+
+sp_clean <- sp %>%
+  dplyr::select(., NAME, variable, estimate) %>%
+  tidyr::spread(., key = variable, value = estimate) %>%
+  dplyr::group_by(NAME) %>%
+  dplyr::mutate(.,
+    English_only = B16007_009 + B16007_015,
+    Spanish = B16007_010 + B16007_015,
+    Other = B16007_011 + B16007_012 + B16007_013 + B16007_017 + B16007_018 + B16007_019,
+    total = B16007_009 + B16007_010 +
+      B16007_011 + B16007_012 +
+      B16007_013 + B16007_014 +
+      B16007_015 + B16007_016 +
+      B16007_017 + B16007_018 +
+      B16007_019,
+    p_English_only = English_only / total,
+    p_Spanish = Spanish / total,
+    p_Other = Other / total
+  ) %>%
+  dplyr::select(.,
+                NAME,
+                English_only,
+                Spanish,
+                Other,
+                p_English_only,
+                p_Spanish,
+                p_Other) %>%
+  tidyr::gather(., key = pop, value = n,-NAME)
+
+sp_n <- sp_clean %>%
+  dplyr::filter(., pop %in% c('English_only',
+                              'Spanish', 'Other'))
+
+sp_p <- sp_clean %>%
+  dplyr::filter(., pop %in% c('p_English_only',
+                              'p_Spanish', 'p_Other'))
+
+sp_n %>% knitr::kable(.)
+```
+
+## Total
+
+```{r spanish-population}
+sp_n %>%
+    ggplot(.) +
+  aes(x = NAME, y = n, fill = pop) +
+    geom_bar(stat='identity') +
+    ylab("Population") +
+    xlab("County")
+```
+
+## Proportion
+
+```{r spanish-proportion}
+sp_p %>%
+    ggplot(.) +
+  aes(x = NAME, y = n, fill = pop) +
+    geom_bar(stat='identity') +
+    ylab("Proportion") +
+    xlab("County")
 ```
 
 # Educational attainment
@@ -80,7 +217,7 @@ ed <- get_ed_attain(state = params$state, county = params$counties)
 
 ## Population
 
-```{r}
+```{r ed-attain}
 ed_w <- make_ed_attain_wide(ed)
 ed_s <- simplify_ed_attain(ed_w)
 ed_t <- tidy_ed_attain(ed_s)
@@ -89,7 +226,7 @@ ed_t %>%
   knitr::kable(.)
 ```
 
-```{r}
+```{r ed-attain-population}
 plot_bar_ed_attain <- function(df) {
   require(ggplot2)
   # Drop total
@@ -143,3 +280,35 @@ plot_bar_ed_attain_p <- function(df) {
 plot_bar_ed_attain_p(ed_p)
 ```
 
+# Recruiting targets $n=$ `r params$target_n`
+
+These may total > `r params$target_n` due to rounding.
+
+## Race
+
+```{r race-target}
+targ_pop <- pop_p %>%
+  dplyr::mutate(n_target = ceiling(n*30)) %>%
+  dplyr::select(NAME, pop, n_target)
+targ_pop %>% knitr::kable(.)
+```
+
+## Spanish-speakers
+
+```{r spanish-target}
+targ_sp <- sp_p %>%
+  dplyr::mutate(n_target = ceiling(n*30)) %>%
+  dplyr::select(NAME, pop, n_target)
+
+targ_sp %>% knitr::kable(.)
+```
+
+## Educational attainment
+
+```{r ed-attain-target}
+targ_ed <- ed_p %>%
+  dplyr::mutate(n_target = ceiling(n*30)) %>%
+  dplyr::select(NAME, ed_attain, n_target)
+
+targ_ed %>% knitr::kable(.)
+```
