1st draft of batch reports

--- a/PLAY-recruiting-site-report.Rmd
+++ b/PLAY-recruiting-site-report.Rmd
@@ -12,7 +12,8 @@ params:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE,
-                      warning=FALSE, message=FALSE, error=FALSE)
+                      warning=FALSE, message=FALSE, error=FALSE,
+                      ccache = TRUE)
 source("R/site_report_functions.R")
 
 library(tidyverse)
